# M

./: .gitignore  .gitmodules  M.ino  Makefile  README.md  build_flash_monitor.sh  codegen.py  codegen_all.sh  codegen_enum.py  codegen_esp32.py  codegen_teensy.py  init_gen.py  reboot_and_monitor.sh  transformer_config.yaml
M_achine/: verilate.sh
M_engine/: Doxyfile  M_teensy.ino  Makefile  build_flash.sh  build_flash_monitor.sh  monitor.sh  reboot_and_monitor.sh
M_esp32/main/: CMakeLists.txt  em.c  em_comms.c  em_context.c  em_display.c  em_files.c  em_i2c.c  em_menu.c  em_parameter.c  em_parameter_widget.c  em_pipeline.c  em_profile.c  em_profile_send.c  em_profile_view.c  em_sd.c  em_send_jobs.c  em_shared_context.c  em_touch_irq.c  em_transformer.c  em_transformer_init.c  em_transformer_select.c  em_transformer_table.c  em_transformer_view.c  em_transformer_widget.c  em_ui.c  lvgl_port.c  waveshare_rgb_lcd_port.c
M_teensy/: M_teensy.ino  Makefile  build_flash_monitor.sh  monitor.sh
esp32/main/: CMakeLists.txt  M.c  comms.c  display.c  display.h  esp32_context.c  esp32_context.h  i2c.c  i2c.h  idf_component.yml  lv_conf.h  lvgl_port.c  lvgl_port.h  parameter_widget.c  parameter_widget.h  shared_context.h  teensy_comms.c  teensy_comms.h  touch_irq.c  transformer_view.c  transformer_view.h  ui.c  ui.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
shared/: m_alloc.c  m_alloc.h  m_comms.c  m_comms.h  m_error_codes.c  m_error_codes.h  m_linked_list.h  m_parameter.h  m_pipeline.h  m_profile.h  m_transformer.h  m_transformer_enum.c  m_transformer_enum.h
(+402 files in other folders)
