idf_component_register(SRCS "M.c"
							"i2c.c"
							"teensy_comms.c"
							"display.c"
							"waveshare_rgb_lcd_port.c"
							"lvgl_port.c"
							"ui.c"
							"comms.c"
							"transformer_view.c"
							"parameter_widget.c"
							"touch_irq.c"
							"esp32_context.c"
					INCLUDE_DIRS "." "../../src")
